<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        tools:context=".ui.AlbumActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Albúm nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cover URL" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descripción" />
    </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/album_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <DatePicker
                android:id="@+id/album_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>


        <Spinner
            android:id="@+id/album_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    <Button
        android:id="@+id/create_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Crear" />
    </LinearLayout>
</ScrollView>