<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/action_inicio"
            android:icon="@drawable/ic_menu_album"
            android:title="@string/action_inicio"/>

        <item
            android:id="@+id/action_album"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_switch_layout" />

        <item
            android:id="@+id/action_coleccionista"
            android:icon="@drawable/ic_coleccionista"
            android:title="@string/action_coleccionista" />

        <item
            android:id="@+id/action_musician"
            android:icon="@drawable/ic_coleccionista"
            android:title="@string/action_musician" />

    </group>
</menu>